[375]: Clean up some linting issues