@@ -18,7 +18,6 @@ package uk.ac.cam.cl.dtg.isaac.api;
 
 import static uk.ac.cam.cl.dtg.segue.api.Constants.SEGUE_SERVER_LOG_TYPES;
 
-import com.google.common.collect.ImmutableSet;
 import java.util.Arrays;
 import java.util.HashSet;
 import java.util.Set;
@@ -49,7 +48,7 @@ public final class Constants {
   public static final String HIDE_FROM_FILTER_TAG = "nofilter";
   public static final String RELATED_CONTENT_FIELDNAME = "relatedContent";
 
-  public static final Set<String> SITE_WIDE_SEARCH_VALID_DOC_TYPES = ImmutableSet.of(
+  public static final Set<String> SITE_WIDE_SEARCH_VALID_DOC_TYPES = Set.of(
       QUESTION_TYPE, CONCEPT_TYPE, TOPIC_SUMMARY_PAGE_TYPE, PAGE_TYPE, EVENT_TYPE);
 
   public static final int NUMERIC_QUESTION_DEFAULT_SIGNIFICANT_FIGURES = 2;
@@ -175,7 +174,7 @@ public final class Constants {
   public static final Set<String> ISAAC_CLIENT_LOG_TYPES =
       Arrays.stream(IsaacClientLogType.values()).map(IsaacClientLogType::name).collect(Collectors.toSet());
 
-  public static final Set<String> ALL_ACCEPTED_LOG_TYPES = new HashSet<String>() {
+  public static final Set<String> ALL_ACCEPTED_LOG_TYPES = new HashSet<>() {
     {
       addAll(SEGUE_SERVER_LOG_TYPES);
       addAll(ISAAC_SERVER_LOG_TYPES);
